--- a/linux-tmux/tmux.conf
+++ b/linux-tmux/tmux.conf
@@ -4,6 +4,11 @@ set -g default-terminal "xterm"
 source-file "${HOME}/.tmux/themes/default.tmux"
 
 # -----------------------------------------------------------------------------
+# New windows should start in the same directory as the current pane
+# -----------------------------------------------------------------------------
+bind-key c neww -c "#{pane_current_path}"
+
+# -----------------------------------------------------------------------------
 # Turn on window renumbering
 # -----------------------------------------------------------------------------
 set-option -g renumber-windows on
