--- a/linux-tmux/tmux.conf
+++ b/linux-tmux/tmux.conf
@@ -1,5 +1,5 @@
 set -sg escape-time 0
-set -g prefix C-Space
+set -g prefix C-a
 set -g default-terminal "xterm"
 source-file "${HOME}/.tmux/themes/default.tmux"
 
