Better terminal integration and snippets

--- a/mac-tmux/tmux.conf
+++ b/mac-tmux/tmux.conf
@@ -19,6 +19,11 @@ set-option -g renumber-windows on
 set -g mouse-resize-pane on
 
 # -----------------------------------------------------------------------------
+# Switch tmux panes with the mouse
+# -----------------------------------------------------------------------------
+set -g mouse-select-pane on
+
+# -----------------------------------------------------------------------------
 # Turn on Vim mode for movement
 # Also allows easy upwards searching
 # -----------------------------------------------------------------------------
