--- a/mac-tmux/tmux.conf
+++ b/mac-tmux/tmux.conf
@@ -1,7 +1,7 @@
 set -sg escape-time 0
 set -g prefix C-Space
 set -g default-terminal "xterm"
-source-file "${HOME}/.tmux/themes/default.tmux"
+# source-file "${HOME}/.tmux/themes/default.tmux"
 
 # -----------------------------------------------------------------------------
 # Attempt to put an end to the iTerm tmux vim copy nonsense
@@ -11,7 +11,7 @@ set-option -g default-command "reattach-to-user-namespace -l zsh"
 # -----------------------------------------------------------------------------
 # Turn on window renumbering
 # -----------------------------------------------------------------------------
-set-option -g renumber-windows on
+# set-option -g renumber-windows on
 
 # -----------------------------------------------------------------------------
 # Resize tmux panes with the mouse
