--- a/linux-tmux/tmux.conf
+++ b/linux-tmux/tmux.conf
@@ -1,71 +1,70 @@
-set -sg escape-time 0
-set -g prefix C-a
 set -g default-terminal "xterm"
-source-file "${HOME}/.tmux/themes/default.tmux"
+set -g default-terminal "screen-256color"
 
-# -----------------------------------------------------------------------------
-# New windows should start in the same directory as the current pane
-# -----------------------------------------------------------------------------
+# Leader
+# unbind -n C-b
+# unbind -n C-a
+set -g prefix C-a
+
+# New window starts on current
 bind-key c neww -c "#{pane_current_path}"
 
-# -----------------------------------------------------------------------------
-# Turn on window renumbering
-# -----------------------------------------------------------------------------
-set-option -g renumber-windows on
-
-# -----------------------------------------------------------------------------
-# Resize tmux panes with the mouse
-# -----------------------------------------------------------------------------
-set -g mouse-resize-pane on
-
-# -----------------------------------------------------------------------------
-# Turn on Vim mode for movement
+# Vim movement
 # Also allows easy upwards searching
-# -----------------------------------------------------------------------------
 setw -g mode-keys vi
 
-# -----------------------------------------------------------------------------
-# Don't resize the screen when users are in different windows
-# -----------------------------------------------------------------------------
+# Skip that resizing bullshit, tmux a -d if problem persist
 setw -g aggressive-resize on
 
-# -----------------------------------------------------------------------------
-# Vim visual selection and yank when in copy mode
-# -----------------------------------------------------------------------------
-bind Space copy-mode
-bind C-Space copy-mode
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-selection
-bind -t vi-copy Escape cancel
-
-# -----------------------------------------------------------------------------
-# After we have something yanked back in Vim we can paste our yanked selection
-# anywhere we are in insert mode with (prefix p). This works in the vim buffer,
-# search and fuzzy finder buffer for example
-# -----------------------------------------------------------------------------
-bind p paste-buffer
-
-# -----------------------------------------------------------------------------
-# Easier for my brain to remember to split the pane with - and \
-# which resemble a horizontal and vertical split respectively
-# doesn't override default (prefix ") and (prefix &)
-# -----------------------------------------------------------------------------
-bind \ split-window -h -c "#{pane_current_path}"
-bind - split-window -c "#{pane_current_path}"
-bind c new-window -c "#{pane_current_path}"
-
-# -----------------------------------------------------------------------------
-# visual notification of activity in other windows
-# -----------------------------------------------------------------------------
-setw -g monitor-activity on
-set -g visual-activity on
-
-# -----------------------------------------------------------------------------
 # Switch between tmux screen splits and Vim splits with the same keys!
 # <C-h><C-j><C-k><C-l>
-# -----------------------------------------------------------------------------
 is_view_vim_diff="echo '#{pane_current_command}' | grep -iqE '(view|vim)(diff)?'"
 bind -n C-h run "$is_view_vim_diff && tmux send-keys C-h || tmux select-pane -L"
 bind -n C-j run "$is_view_vim_diff && tmux send-keys C-j || tmux select-pane -D"
 bind -n C-k run "$is_view_vim_diff && tmux send-keys C-k || tmux select-pane -U"
 bind -n C-l run "$is_view_vim_diff && tmux send-keys C-l || tmux select-pane -R"
+
+# Splits that makes sense
+bind \ split-window -h -c "#{pane_current_path}"
+bind - split-window -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
+# Mouse selection and resizing
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
+set -g mouse-select-pane on
+#### COLOUR (Solarized dark)
+
+# default statusbar colors
+set-option -g status-bg black #base02
+set-option -g status-fg yellow #yellow
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-fg brightblue #base0
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg brightred #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg black #base02
+set-option -g pane-active-border-fg brightgreen #base01
+
+# message text
+set-option -g message-bg black #base02
+set-option -g message-fg brightred #orange
+
+# pane number display
+set-option -g display-panes-active-colour blue #blue
+set-option -g display-panes-colour brightred #orange
+
+# clock
+set-window-option -g clock-mode-colour green #green
+
+# bell
+set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
